# cube-streamer

./: .gitignore  README.md
.beads/: issues.jsonl
.beads/formulas/: mol-session-gc.formula.toml
client/: index.html  package.json
client/src/: main.js  styles.css
cube_streamer/.beads/: issues.jsonl
docker/: docker-compose.yml  server.Dockerfile  turn.Dockerfile
docs/: architecture.md  ops.md  signaling.md
eyes_and_ears/.beads/: issues.jsonl
mayor/: ROLE.md
scripts/: dev.sh  run_client.sh  run_server.sh
server/: CMakeLists.txt
server/assets/shaders/: cube.vert
server/include/: config.h  pipeline.h  render.h  signaling.h
server/src/: config.c  main.c  pipeline_gst.c  render_egl.c  signaling_ws.c
